Implement POST /tournaments (#22)
* Implement tournament creation API

Closes #8

* Track tournament repository port
